@@ -356,7 +356,7 @@ int ublkdel(BW *bw)
 		if (lightoff)
 			unmark(bw);
 	} else {
-		msgnw(bw, "No block");
+		msgnw(bw->parent, "No block");
 		return -1;
 	}
 	return 0;
@@ -393,7 +393,7 @@ int ublkmove(BW *bw)
 {
 	if (markv(1)) {
 		if (markb->b->rdonly) {
-			msgnw(bw, "Read only");
+			msgnw(bw->parent, "Read only");
 			return -1;
 		}
 		if (square) {
@@ -441,7 +441,7 @@ int ublkmove(BW *bw)
 			return 0;
 		}
 	}
-	msgnw(bw, "No block");
+	msgnw(bw->parent, "No block");
 	return -1;
 }
 
@@ -484,7 +484,7 @@ int ublkcpy(BW *bw)
 			updall();
 			return 0;
 	} else {
-		msgnw(bw, "No block");
+		msgnw(bw->parent, "No block");
 		return -1;
 	}
 }
@@ -505,7 +505,7 @@ int dowrite(BW *bw, char *s, void *object, int *notify)
 					  markk->xcol);
 
 			if ((fl = bsave(tmp->bof, s, tmp->eof->byte)) != 0)
-				msgnw(bw, msgs[5 + fl]), ret = -1;
+				msgnw(bw->parent, msgs[5 + fl]), ret = -1;
 			brm(tmp);
 			if (lightoff)
 				unmark(bw);
@@ -516,14 +516,14 @@ int dowrite(BW *bw, char *s, void *object, int *notify)
 			int ret = 0;
 
 			if ((fl = bsave(markb, s, markk->byte - markb->byte)) != 0)
-				msgnw(bw, msgs[5 + fl]), ret = -1;
+				msgnw(bw->parent, msgs[5 + fl]), ret = -1;
 			if (lightoff)
 				unmark(bw);
 			vsrm(s);
 			return ret;
 	} else {
 		vsrm(s);
-		msgnw(bw, "No block");
+		msgnw(bw->parent, "No block");
 		return -1;
 	}
 }
@@ -694,7 +694,7 @@ int doinsf(BW *bw, char *s, void *object, int *notify)
 
 			tmp = bload(s);
 			if (error) {
-				msgnw(bw, msgs[error + 5]);
+				msgnw(bw->parent, msgs[error + 5]);
 				brm(tmp);
 				return -1;
 			}
@@ -718,14 +718,14 @@ int doinsf(BW *bw, char *s, void *object, int *notify)
 			updall();
 			return 0;
 		} else {
-			msgnw(bw, "No block");
+			msgnw(bw->parent, "No block");
 			return -1;
 	} else {
 		int ret = 0;
 		B *tmp = bload(s);
 
 		if (error)
-			msgnw(bw, msgs[error + 5]), brm(tmp), ret = -1;
+			msgnw(bw->parent, msgs[error + 5]), brm(tmp), ret = -1;
 		else
 			binsb(bw->cursor, tmp);
 		vsrm(s);
@@ -749,7 +749,7 @@ static int dofilt(BW *bw, char *s, void *object, int *notify)
 	if (markb && markk && !square && markb->b == bw->b && markk->b == bw->b && markb->byte == markk->byte)
 		goto ok;
 	if (!markv(1)) {
-		msgnw(bw, "No block");
+		msgnw(bw->parent, "No block");
 		return -1;
 	}
       ok:
@@ -868,7 +868,7 @@ static int checkmark(BW *bw)
 int ufilt(BW *bw)
 {
 #ifdef __MSDOS__
-	msgnw(bw, "Sorry, no sub-processes in DOS (yet)");
+	msgnw(bw->parent, "Sorry, no sub-processes in DOS (yet)");
 	return -1;
 #else
 	switch (checkmark(bw)) {
@@ -886,7 +886,7 @@ int ufilt(BW *bw)
 
 		case 2:
 		default:
-		msgnw(bw, "No block");
+		msgnw(bw->parent, "No block");
 		return -1;
 	}
 #endif
